--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FreshStore",
+  "name": "freshstore",
   "version": "1.0.0",
   "description": "My template",
   "main": "index.js",
@@ -37,6 +37,8 @@
     "css-loader": "^2.1.1",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
+    "eslint": "^6.0.1",
+    "eslint-loader": "^2.2.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
@@ -46,6 +48,7 @@
     "pug-loader": "^2.4.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "stylelint-webpack-plugin": "^0.10.5",
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
